Fixed input border-radius on iOS

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -7,6 +7,8 @@
 
   &__control {
     width: 100%;
+    border-radius: 0;
+    -webkit-border-radius: 0;
     outline: none;
     transition: font-weight var(--delay),
                 box-shadow var(--delay),
